# live-shows

./: .gitignore
dart/live/: .gitignore  build.yaml  pubspec.yaml
dart/live/lib/: live.dart
dart/live/proto/: shows.proto
dart/live/test/: live_test.dart
golang/: BUILD  WORKSPACE
golang/models/: BUILD.bazel  show_validation_test.go  shows.proto
golang/protos/: BUILD.bazel  shows.proto
golang/validation/: BUILD.bazel  show_validation_test.go
