load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "models_proto",
    srcs = ["shows.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "models_go_proto",
    importpath = "github.com/organicveggie/live-shows/models",
    proto = ":models_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_envoyproxy_protoc_gen_validate//validate:validate_go_proto"],
)

go_library(
    name = "models",
    embed = [":models_go_proto"],
    importpath = "github.com/organicveggie/live-shows/models",
    visibility = ["//visibility:public"],
)

go_test(
    name = "models_test",
    srcs = ["show_validation_test.go"],
    embed = [":models"],
)
